--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   }
 }
