--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Florian Pfisterer",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
